--fix: UX on mobile for filtering and sorting modal

--- a/components/FilterModal/filter-modal.module.css
+++ b/components/FilterModal/filter-modal.module.css
@@ -22,14 +22,12 @@
   background-color: #fff;
   height: auto;
   justify-self: flex-start;
-  /* max-height: 70vh; */
   overflow: auto;
   width: 100%;
-  /* max-width: 350px; */
 }
 
 .container .sort-filter-container {
-  margin-bottom: 6.5rem;
+  padding-bottom: 14rem;
 }
 
 .close {
@@ -48,14 +46,13 @@
 
 div.svg-container {
   padding: 0.75rem 0.875rem;
-  border: 1px solid #fff;
+  border: 1px solid transparent;
   border-radius: 0.5rem !important;
   margin: 0px 3px;
   cursor: pointer;
 }
 
 div.svg-container.active {
-  padding: 0.75rem 0.875rem;
   border: 2px solid black;
 }
 
