--- a/components/ToggleFilter/toggle-filter.module.css
+++ b/components/ToggleFilter/toggle-filter.module.css
@@ -4,14 +4,13 @@
 
 div.svg-container {
   padding: 0.75rem 0.875rem;
-  border: 1px solid #fff;
+  border: 1px solid transparent;
   border-radius: 0.5rem !important;
   margin: 0px 3px;
   cursor: pointer;
 }
 
 div.svg-container.active {
-  padding: 0.75rem 0.875rem;
   border: 2px solid black;
 }
 
